Bring Android Online and update naming

--- a/SomeWhat/Views/RootPage.xaml
+++ b/SomeWhat/Views/RootPage.xaml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:SomeWhat" x:Class="SomeWhat.RootPage"
+﻿<?xml version="1.0" encoding="utf-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="SommeWhat.Views.RootPage"
 		Title="Wine Collection">
 	<ListView ItemsSource="{Binding Wines}">
 		<ListView.ItemTemplate>
